fix for ministral warmup